[package]
name = "iot_data_gen"
version = "0.1.0"
authors = ["Andreas Schreiber"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
rand = "0.8.5"
rdkafka = { version = "0.29.0", features = ["cmake-build"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
